--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -48,8 +48,20 @@ margin: 0px 7px;
   background-image: url(../images/flowerTea.jpg);
   width: 1200px;
   height: 700px;
+  padding-top: 100px;
+  margin: auto;
 }
 
-h2 h4 .flowerTea {
-  align-items: center;
+.flowerTea h2 h4 {
+  background-color: black;
+  }
+
+  .section2 {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .horizontal-align {
+    display: flex;
+    flex-direction: inline-block;
   }
