--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -42,18 +42,19 @@ margin: 0px 7px;
 .section1 {
   display: flex;
   flex-direction: column;
+  padding-top: 100px;
 }
 
 .flowerTea {
   background-image: url(../images/flowerTea.jpg);
   width: 1200px;
   height: 700px;
-  padding-top: 100px;
   margin: auto;
 }
 
 .flowerTea h2 h4 {
   background-color: black;
+  align-items: center;
   }
 
   .section2 {
