--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -42,19 +42,21 @@ margin: 0px 7px;
 .section1 {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   padding-top: 100px;
+  margin: auto;
+  background: url(../images/flowerTea.jpg) no-repeat;
+  width: 1200px;
+  height: 700px;
 }
 
 .flowerTea {
-  background-image: url(../images/flowerTea.jpg);
-  width: 1200px;
-  height: 700px;
-  margin: auto;
+  text-align: center;
+  background-color: black;
 }
 
 .flowerTea h2 h4 {
-  background-color: black;
-  align-items: center;
+
   }
 
   .section2 {
