--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -17,6 +17,7 @@ header {
   border-bottom: 1px solid seashell;
   position: fixed;
   width: 100%;
+  z-index: 10;
   }
 
 header .logo {
@@ -37,13 +38,15 @@ margin: 0px 7px;
 .mainContainer {
   display: flex;
   flex-direction: column;
+  padding-top: 100px;
+  position: relative;
+  z-index: 5;
 }
 
 .section1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding-top: 100px;
   margin: auto;
   background: url(../images/flowerTea.jpg) no-repeat;
   width: 1200px;
@@ -55,10 +58,6 @@ margin: 0px 7px;
   background-color: black;
 }
 
-.flowerTea h2 h4 {
-
-  }
-
   .section2 {
     display: flex;
     flex-direction: row;
@@ -68,3 +67,20 @@ margin: 0px 7px;
     display: flex;
     flex-direction: inline-block;
   }
+
+  .section2 {
+    width: 1000px;
+    display: flex;
+    flex-direction: column;
+  }
+
+.section2 .wrap {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.wrap img {
+  height: 200px;
+  width: 300px;
+}
