--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -92,13 +92,17 @@ margin: 0px 7px;
   margin: 10px;
 }
 
+.wrap h4 {
+  text-align: center;
+}
+
 /*Section 3 */
 
 .section3 {
   display: flex;
   flex-direction: column;
   background: url(../images/locationTea.jpg) no-repeat;
-  width: 1200px;
+  width: 980px;
   height: 500px;
   margin: auto;
 }
@@ -106,11 +110,62 @@ margin: 0px 7px;
 .location-container {
   display: flex;
   flex-direction: row;
-  background-color: black;
-  margin: 20px;
+  justify-content: space-around;
+  margin-top: 0x;
 }
 
 .box {
+  display: flex;
+  flex-direction: column;
   width: 300px;
   height: 300px;
+  background-color: black;
+  margin-top: 30px;
+  justify-content: center;
+  opacity: 1;
+}
+
+.location-container .box h4 {
+  text-align: center;
+}
+
+.location-container .box p {
+  text-align: center;
+}
+
+
+.section3 .location-heading h2 {
+  display: flex;
+  flex: row;
+  justify-content: center;
+  margin-bottom: 15px;
+  }
+
+/*Footer */
+
+footer {
+  display: flex;
+  flex-direction: column;
+  height: 200px;
+  width: 1200px;
+  margin: auto;
+  padding-top: 20px;
+}
+
+footer  h2 {
+  text-align: center;
+  align-items: center;
+  padding: 9px;
+  margin: 0;
+}
+
+footer  h5 {
+  text-align: center;
+  align-items: center;
+  padding: 9px;
+  margin: 0;
+}
+
+footer .copyright h5 {
+  text-align: left;
 }
